# kiro-ai-gateway

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
docker/: Dockerfile  Dockerfile.backend  docker-compose.backend.yml  docker-compose.yml
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: account.rs  autostart.rs  cloudflared.rs  mod.rs  proxy.rs  proxy_pool.rs  security.rs  user_token.rs
src-tauri/src/models/: account.rs  config.rs  mod.rs  quota.rs  token.rs
src-tauri/src/modules/: account.rs  cloudflared.rs  config.rs  device.rs  integration.rs  migration.rs  mod.rs  oauth.rs  proxy_db.rs  quota.rs  scheduler.rs  security_db.rs  token_stats.rs  user_token_db.rs
src-tauri/src/proxy/: cli_sync.rs  config.rs  droid_sync.rs  mod.rs  monitor.rs  opencode_sync.rs  proxy_pool.rs  rate_limit.rs  security.rs  server.rs  session_manager.rs  signature_cache.rs  token_manager.rs
src-tauri/src/proxy/audio/: mod.rs
src-tauri/src/proxy/common/: common_utils.rs  context_manager.rs  error_classifier.rs  mod.rs  model_mapping.rs  tool_result_compressor.rs
src-tauri/src/proxy/handlers/: admin.rs  audio.rs  claude.rs  common.rs  gemini.rs  mod.rs  openai.rs  warmup.rs
src-tauri/src/proxy/mappers/: mod.rs
src-tauri/src/proxy/mappers/claude/: mod.rs  models.rs  request.rs  response.rs  streaming.rs
src-tauri/src/proxy/mappers/gemini/: collector.rs  mod.rs  models.rs  wrapper.rs
src-tauri/src/proxy/mappers/openai/: collector.rs  mod.rs  models.rs  request.rs  response.rs  streaming.rs
src-tauri/src/proxy/middleware/: auth.rs  cors.rs  ip_filter.rs  mod.rs  monitor.rs  service_status.rs
src-tauri/src/proxy/upstream/: client.rs  mod.rs  retry.rs
src-tauri/src/utils/: protobuf.rs
src/locales/: ar.json  en.json  es.json  ja.json  ko.json  my.json  pt.json  ru.json  tr.json  vi.json  zh-TW.json  zh.json
src/pages/: Accounts.tsx  ApiProxy.tsx  Dashboard.tsx  Monitor.tsx  (+4 more)
(+40 files in other folders)
