[package]
name = "kiro_ai_gateway"
version = "0.1.0"
description = "Kiro AI Gateway - AI Account Management & Protocol Proxy"
authors = ["Kiro"]
license = "MIT"
edition = "2021"

[lib]
name = "kiro_ai_gateway_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.2.5", features = [] }

[dependencies]
tauri = { version = "^2.2.5", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream", "socks", "blocking"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
thiserror = "2.0.17"
sha2 = "0.10"

# Proxy service dependencies
axum = { version = "0.7", features = ["multipart"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
eventsource-stream = "0.2"
dashmap = "6.1"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
async-stream = "0.3.6"
regex = "1.12.2"
once_cell = "1.19"
pin-project = "1.1"
bytes = "1.5"
toml = "0.8"
toml_edit = "0.22"
parking_lot = "0.12.5"
tokio-util = "0.7.18"

tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
libc = "0.2"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
open = "5"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[dev-dependencies]
proptest = "1.6"
tempfile = "3"
